@@ -74,7 +74,6 @@ $parents = array("profile.php" => "home.php",
 		 "slice-jacks.php" => "slice.php",
 		 "slice-add-resources-jacks.php" => "slice.php",
 		 "stitcher_slice-add-resources.php" => "slice.php",
-		 "create-rspec.php" => "slice.php",
 		 "slice-member.php" => "slice.php",
 		 "slicecred.php" => "slice.php",
 		 "sliceresource.php" => "slice.php",
@@ -141,7 +140,6 @@ $names = array("home.php" => $TAB_HOME,
 		 "slice-add-resources.php" => "Add Resources to %slice_name",
 		 "slice-add-resources-jacks.php" => "Add Resources to %slice_name using Jacks",
 		 "stitcher_slice-add-resources.php" => "Add stitched topology to %slice_name",
-		 "create-rspec.php" => "Add Resources to %slice_name using Jacks",
 		 "slice-member.php" => "Member %member_name in Slice %slice_name",
 		 "slicecred.php" => "Get Slice %slice_name slice credential",
 		 "createsliver.php" => "Add Resources to %slice_name (Results)",
